feat: implement user retrieval with profile data and create UserWithProfileResource DTO